--- a/.buddy/stg-pipeline.yaml
+++ b/.buddy/stg-pipeline.yaml
@@ -8,7 +8,7 @@
   trigger_conditions:
     - trigger_condition: ON_CHANGE_AT_PATH
       trigger_condition_paths:
-        - folder2
+        - "folder2/"
   actions:
     - action: "test action"
       type: "NATIVE_BUILD_MAC"
