--- a/.buddy/stg-pipeline.yaml
+++ b/.buddy/stg-pipeline.yaml
@@ -5,10 +5,7 @@
       refs:
         - "main"
   priority: "NORMAL"
-  trigger_conditions:
-    - trigger_condition: ON_CHANGE_AT_PATH
-      trigger_condition_paths:
-        - "folder2/"
+  trigger_condition: "ALWAYS"
   actions:
     - action: "test action"
       type: "NATIVE_BUILD_MAC"
