--- a/.buddy/prod-pipeline.yaml
+++ b/.buddy/prod-pipeline.yaml
@@ -6,7 +6,7 @@
         - "main"
   priority: "NORMAL"
   trigger_conditions:
-    - trigger_condition: ON_CHANGE_AT_PATH
+    - trigger_condition: "ON_CHANGE_AT_PATH"
       trigger_condition_paths:
         - "/folder1/"
   actions:
