--- a/.buddy/stg-pipeline.yaml
+++ b/.buddy/stg-pipeline.yaml
@@ -5,7 +5,7 @@
       refs:
         - "main"
   priority: "NORMAL"
-  # fail_on_prepare_env_warning: true
+  fail_on_prepare_env_warning: true
   auto_clear_cache: true
   trigger_conditions:
     - trigger_condition: "ON_CHANGE_AT_PATH"
